# pytimetk

./: .gitignore  .nojekyll  404.html  CHANGELOG.html  CHANGELOG.md  README.html  README.md  changelog-news.html  changelog.html  changelog.qmd  contributing.html  index.html  noxfile.py  pyproject.toml  pyrightconfig.json  requirements-optional.txt  requirements.txt  robots.txt  search.json  setup.py  sitemap.xml  sorting_review.html  test.R  tests.py  tk_augment_holiday_signature.py
.github/workflows/: pandas-checks.yaml  polars-checks.yaml  timetk-checks.yaml  timetk-ubuntu.yaml
docs/: .gitignore  CHANGELOG.qmd  _quarto.yml  _sidebar.yml  changelog-news.qmd  contributing.html  contributing.qmd  index.html  index.ipynb  index.qmd  objects.json  sorting_review.md  theme-dark.scss  theme-light.scss  theme.scss
docs/_includes/: _footer.qmd  head.html
docs/_site/: 404.html  CHANGELOG.html  changelog-news.html  contributing.html  index.html  robots.txt  search.json  sitemap.xml
docs/comparisons/: 01_performance.qmd
docs/getting-started/: 01_installation.html  01_installation.qmd  02_quick_start.html  02_quick_start.qmd
docs/guides/: 01_timetk_concepts.qmd  01_visualization.html  01_visualization.qmd  02_pandas_frequency.qmd  02_timetk_concepts.html  02_timetk_concepts.qmd  03_pandas_frequency.html  03_pandas_frequency.qmd  04_wrangling.qmd  05_augmenting.html  05_augmenting.qmd  06_anomalize.ipynb  06_anomalize.qmd  07_feature_store.qmd  07_polars.qmd  07_timeseries_crossvalidation.qmd  08_selectors_dates.qmd  index.qmd  mlflow_missing.txt  tutorial_1.qmd  tutorial_2.qmd
docs/performance/: 01_speed_comparisons.qmd
docs/production/: 01_feature_store.html  01_feature_store.qmd  02_gpu_acceleration.html  02_gpu_acceleration.qmd  03_ray_parallelism.html  03_ray_parallelism.qmd
docs/reference/: FeatureSetMetadata.qmd  FeatureSetResult.qmd  FeatureStore.qmd  FeatureStoreAccessor.qmd  TimeSeriesCV.qmd  TimeSeriesCVSplitter.qmd  acf_diagnostics.qmd  anomalize.qmd  apply_by_time.qmd  augment_adx.qmd  augment_atr.qmd  augment_bbands.qmd  augment_cmo.qmd  augment_diffs.qmd  augment_drawdown.qmd  augment_ewm.qmd  augment_ewma_volatility.qmd  augment_expanding.qmd  augment_expanding_apply.qmd  augment_fip_momentum.qmd  augment_fourier.qmd  augment_hilbert.ipynb  augment_hilbert.qmd  augment_holiday_signature.qmd  augment_hurst_exponent.qmd  augment_lags.qmd  augment_leads.qmd  augment_macd.qmd  augment_pct_change.qmd  augment_ppo.qmd  augment_qsmomentum.qmd  augment_regime_detection.qmd  augment_roc.qmd  augment_rolling.qmd  augment_rolling_apply.qmd  augment_rolling_risk_metrics.qmd  augment_rsi.qmd  augment_spline.qmd  augment_stochastic_oscillator.qmd  augment_timeseries_signature.qmd  (+62 more)
docs/tutorials/: 01_sales_crm.qmd  02_finance.ipynb  02_finance.qmd  03_demand_forecasting.qmd  04_anomaly_detection.qmd  05_clustering.html  05_clustering.qmd  06_correlationfunnel.html  06_correlationfunnel.qmd  07_timeseries_crossvalidation.qmd  sales_crm.qmd
feature-catalog/: catalog.json
getting-started/: 01_installation.html  02_quick_start.html  tutorial_1.html
guides/: 00_visualization.html  01_timetk_concepts.html  01_visualization.html  02_timetk_concepts.html  03_pandas_frequency.html  03_wrangling.html  04_wrangling.html  05_augmenting.html  06_anomalize.html  07_correlationfunnel.html  07_feature_store.html  07_timeseries_crossvalidation.html  08_selectors_dates.html  index.html
performance/: 01_speed_comparisons.html
production/: 01_feature_store.html  02_gpu_acceleration.html
reference/: FeatureSetMetadata.html  FeatureSetResult.html  FeatureStore.html  FeatureStoreAccessor.html  TimeSeriesCV.html  TimeSeriesCVSplitter.html  acf_diagnostics.html  anomalize.html  apply_by_time.html  augment_adx.html  augment_atr.html  augment_bbands.html  augment_cmo.html  augment_diffs.html  augment_drawdown.html  augment_ewm.html  augment_ewma_volatility.html  augment_expanding.html  augment_expanding_apply.html  augment_fip_momentum.html  augment_fourier.html  augment_hilbert.html  augment_holiday_signature.html  augment_hurst_exponent.html  augment_lags.html  augment_leads.html  augment_macd.html  augment_pct_change.html  augment_ppo.html  augment_qsmomentum.html  augment_regime_detection.html  augment_roc.html  augment_rolling.html  augment_rolling_apply.html  augment_rolling_risk_metrics.html  augment_rsi.html  augment_spline.html  augment_stochastic_oscillator.html  augment_timeseries_signature.html  augment_wavelet.html  (+55 more)
roadmap/: datetime_alias_migration.md  performance_memory_review.md  ray_migration.md  tidy_selector_integration_roadmap.md  visualization_phase1_r_function_audit.md  visualization_porting_roadmap.md
scripts/: generate_pandas_stubs.py
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/pytimetk/: __init__.py  _polars_compat.py  (+2 more)
src/pytimetk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stub-packages/pandas-stubs-pytimetk/: .gitignore  LICENSE  README.md  pyproject.toml
stub-packages/pandas-stubs-pytimetk/src/: __init__.pyi
stub-packages/pandas-stubs-pytimetk/src/pandas/core/: frame.pyi
stub-packages/pandas-stubs-pytimetk/src/pandas/core/groupby/: generic.pyi
tests/: conftest.py  test_anomalize.py  test_expanding.py  test_expanding_apply.py  test_finance_module.py  test_floor_date.py  test_fourier.py  test_future_frame.py  test_get_frequency_summary.py  test_get_seasonal_frequency.py  test_get_trend_frequency.py  test_holiday_signature.py  test_lags.py  test_leads.py  test_load_dataset.py  test_make_future_timeseries.py  test_pad_by_time.py  test_parallel_helpers.py  test_plot_timeseries.py  test_rolling.py  test_rolling_apply.py  test_sorting.py  test_summarize_by_time.py  test_timeseries_signature.py  test_ts_features.py  test_ts_summary.py
timetk/: __init__.py  data.py  data_wrangling.py
tutorials/: 01_sales_crm.html  02_finance.html  03_anomaly_detection.html  03_demand_forecasting.html  04_anomaly_detection.html  05_clustering.html  06_correlationfunnel.html  07_timeseries_crossvalidation.html
(+378 files in other folders)
